<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="defaut"
        android:id="@+id/player_name"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_gravity="center">
        <TableRow>
            <TextView
                android:text="@string/label"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:text="@string/_6pts"
                android:gravity="end"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:text="@string/_11pts"
                android:gravity="end"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:text="@string/_21pts"
                android:gravity="end"
                android:textStyle="bold"
                android:padding="3dip" />
            <TextView
                android:text="@string/total"
                android:gravity="end"
                android:textStyle="bold"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/games_played"
                android:padding="3dip" />
            <TextView
                android:id="@+id/gp6"
                android:text="0"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gp11"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gp21"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gp0"
                android:gravity="end"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/games_won"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gw6"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gw11"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gw21"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gw0"
                android:gravity="end"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/games_lost"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gl6"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gl11"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gl21"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/gl0"
                android:gravity="end"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/points_scored"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/ps6"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/ps11"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/ps21"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/ps0"
                android:gravity="end"
                android:padding="3dip" />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/points_lost"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/pl6"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/pl11"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/pl21"
                android:gravity="end"
                android:padding="3dip" />
            <TextView
                android:text="0"
                android:id="@+id/pl0"
                android:gravity="end"
                android:padding="3dip" />
        </TableRow>
    </TableLayout>
    <Button
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.Button"
        android:id="@+id/same_player"
        android:onClick="samePlayer"
        android:visibility="invisible"
        android:text="@string/same_player"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="20dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/other_player"
        android:onClick="otherPlayer"
        android:visibility="invisible"
        android:text="@string/other_player"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>