<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/configuration_title"
    style="@style/TextAppearance.AppCompat.Headline"
    android:layout_gravity="center_horizontal"/>
    <View
        android:layout_width="0dp"
        android:layout_height="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/player_1"
        android:id="@+id/player1_spinner"></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/player_2"
        android:id="@+id/player2_spinner"
        ></Spinner>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_type"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/type_spinner"
        android:layout_gravity="end" />
</LinearLayout>

    <Button
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/Ok"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="startGame"
        />
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            style="@style/Widget.AppCompat.Button"
            android:text="@string/cancel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            />
        <View
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>-->


</LinearLayout>